Fixed Cb, but now have log(Ca) and Ca which I can't work with...

--- a/FittingExercise.ipynb
+++ b/FittingExercise.ipynb
@@ -262,6 +262,11 @@
     "# log(Ca) = (logA*(-E/(R*T))*(dH-T*dS)/(R*T)*Cb*t + Ca_0) / (1+logA*(-E/(R*T))*t)\n",
     "\n",
     "# still have Cb ... shouldn't be there\n",
+    "# Cb = Ca_0-Ca ??? I think this makes sense...\n",
+    "# log(Ca) = log(Kf)*(dH-T*dS)/(R*T)*(Ca_0-Ca)*t - log(Kf)*log(Ca)*t + Ca_0\n",
+    "\n",
+    "# new problem : have both log(Ca) and Ca... can't factor that ...\n",
+    "\n",
     "# also the graph is just Ca, not log(Ca) ... getting rid of that results in A not logA which is a parameter...\n",
     "\n",
     "\n",
